samples/_failures_safe/1761537690_f23a7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b57457ef.c: In function ‘main’:
./samples/SAFE/__tmp_b57457ef.c:154:5: error: expected declaration or statement at end of input
  154 |     }
      |     ^
